# vc-verify

./: .gitignore  README.md  documentLoader.js  package-lock.json  package.json  verify.js
vc-verifier/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
vc-verifier/src/vc_verifier/: __init__.py  cli.py  did_resolver.py  statuslist.py  verifier.py
vc-verifier/tests/: __init__.py  test_verifier.py
