[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vc-verifier"
version = "0.1.0"
description = "Verifiable Credentials verifier supporting W3C Data Integrity Proofs (ecdsa-jcs-2022), did:web, and StatusList2021"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "RLDAC", email = "contact@rldac.com" }
]
keywords = ["verifiable-credentials", "did", "w3c", "ssi", "data-integrity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.3.0",
]

[project.scripts]
vc-verify = "vc_verifier.cli:main"

[project.urls]
Homepage = "https://github.com/RLDAC/vc-verify"
Repository = "https://github.com/RLDAC/vc-verify"

[tool.hatch.build.targets.wheel]
packages = ["src/vc_verifier"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
